Work on pom.xml